Fix overlap of title in results
When title long it was overlapping with the formats.

--- a/CkanDotNet.Web/Content/Theme/CastleRock/Styles.css
+++ b/CkanDotNet.Web/Content/Theme/CastleRock/Styles.css
@@ -224,6 +224,7 @@ a
 {
     font-size: 12px;
     font-weight: bold;
+    width: 300px;
 }
 
 .result-date
