--- a/CkanDotNet.Web/Content/Theme/Default/Styles.css
+++ b/CkanDotNet.Web/Content/Theme/Default/Styles.css
@@ -201,6 +201,7 @@ h2
 {
     font-size: 12px;
     font-weight: bold;
+    width: 300px;
 }
 
 .result-date
